RESOLVED FIXED208230
[LFC][IFC][Floats] ASSERT(committedInlineItemCount || line.hasIntrusiveFloat()) in LineLayoutContext::close
https://bugs.webkit.org/show_bug.cgi?id=208230
Summary [LFC][IFC][Floats] ASSERT(committedInlineItemCount || line.hasIntrusiveFloat(...
alan
Reported 2020-02-25 19:09:34 PST
Let's fix it.
Attachments
Patch (7.33 KB, patch)
2020-02-25 19:20 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-25 19:09:50 PST
alan
Comment 2 2020-02-25 19:20:14 PST
WebKit Commit Bot
Comment 3 2020-02-26 07:05:19 PST
Comment on attachment 391717 [details] Patch Clearing flags on attachment: 391717 Committed r257469: <https://trac.webkit.org/changeset/257469>
WebKit Commit Bot
Comment 4 2020-02-26 07:05:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.