[LFC][IFC][Floats] ASSERT(committedInlineItemCount || line.hasIntrusiveFloat()) in LineLayoutContext::close https://bugs.webkit.org/show_bug.cgi?id=208230 <rdar://problem/59791249>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/float-and-br-inline-content-only.html

Expand the ASSERT to include all the valid cases
1. Inline content is added to the line
2. Only float(s) got processed (no inline content)
3. Neither floats not inline content got processed due to intrusive floats.
(This patch slightly rearranges the body of LineLayoutContext::commitFloats and also fixes an off-by-1 error in LineLayoutContext::close.)

* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::LineLayoutContext::close):
(WebCore::Layout::LineLayoutContext::commitFloats):

LayoutTests:

* fast/layoutformattingcontext/float-and-br-inline-content-only-expected.html: Added.
* fast/layoutformattingcontext/float-and-br-inline-content-only.html: Added.


Canonical link: https://commits.webkit.org/221186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257469 268f45cc-cd09-0410-ab3c-d52691b4dbfc